Correct pad styling
The beat tracker was misaligned

--- a/src/style.css
+++ b/src/style.css
@@ -12,23 +12,19 @@
 .pad {
     border-radius: 10px;
     height: 100px;
-    padding: 1%;
     margin: 5px;
     cursor: pointer;
+    text-align: center;
+    color: white;
 }
 .activePadBackground {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: 10px;
-    padding: 1%;
     opacity: 0.8;
-    background-color: white;
+    background-color: green;
     position: absolute;
     top: 0px;
-}
-.sampleLabel {
-    text-align: center;
-    color: white;
 }
 .activeIcon {
     color: white;
